<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetallesActivity">

    <TextView
        android:id="@+id/Nombre_detalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/AIdefualtNombre"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen_detalles" />

    <TextView
        android:id="@+id/Descripcion_detalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/AIdefaultDescripcion"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nombre_detalles" />

    <TextView
        android:id="@+id/Cantidad_noMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="200dp"
        android:text="@string/AIdefaultCantidad"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Cantidad_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="200dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Cantidad_noMod" />

    <Button
        android:id="@+id/Sumar_btn"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/add"
        app:layout_constraintBottom_toTopOf="@+id/Restar_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Restar_btn"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imagen_detalles"
        android:layout_width="228dp"
        android:layout_height="215dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bread" />

    <Button
        android:id="@+id/Salir_detalles_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/Atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signo_dettales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/DSigno"
        app:layout_constraintEnd_toStartOf="@+id/Precio_detalles"
        app:layout_constraintTop_toBottomOf="@+id/Nombre_detalles" />

    <TextView
        android:id="@+id/Precio_detalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nombre_detalles" />

    <Button
        android:id="@+id/GuardarSalir_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/DGuadarSalir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>