<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_view_inventario"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:layout_marginEnd="16dp"
    card_view:cardBackgroundColor = "#227C9D"
    card_view:cardCornerRadius="20dp"
    card_view:elevation="6dp"
    card_view:contentPadding="4dp">

    <RelativeLayout
        android:id="@+id/card_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/card_view_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/card_view_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/card_view_image"
            android:text="@string/AIdefualtNombre"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_view_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_nombre"
            android:layout_marginTop="-0dp"
            android:layout_toEndOf="@id/card_view_image"
            android:text="@string/AIdefaultCantidad"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_view_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_cantidad"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/card_view_image"
            android:text="@string/AIdefaultDescripcion"
            android:textSize="16sp"
            android:textStyle="bold" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>