<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_view_registro_nombre"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:layout_marginEnd="16dp"
    android:fadingEdgeLength="10dp"
    card_view:cardBackgroundColor="#227C9D"
    card_view:cardCornerRadius="20dp"
    card_view:contentPadding="4dp"
    card_view:elevation="6dp">

    <RelativeLayout
        android:id="@+id/card_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/CVLugaresInteres"
        android:fadingEdgeLength="10dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/Nombre_CV_LI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/Imagen_CV_LI"
            android:text="@string/LINombre"
            android:textColor="@color/ColorTexto"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/Imagen_CV_LI"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/bakery" />

        <TextView
            android:id="@+id/Tipo_CV_LI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Nombre_CV_LI"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/Imagen_CV_LI"
            android:text="@string/LITipo"
            android:textColor="@color/ColorTexto"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Direccion_CV_LI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Tipo_CV_LI"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/Imagen_CV_LI"
            android:text="@string/LIDIreccion"
            android:textColor="@color/ColorTexto"
            android:textStyle="bold" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>