<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_view_registro_nombre"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:layout_marginEnd="16dp"
    card_view:cardBackgroundColor = "#227C9D"
    card_view:cardCornerRadius="20dp"
    card_view:elevation="6dp"
    card_view:contentPadding="4dp">

    <RelativeLayout
        android:id="@+id/card_view_layout_bd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/CVInventario"
        android:fadingEdgeLength="10dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/card_view_nombre_inv_bd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/AIdefualtNombre"
            android:textColor="@color/ColorTexto"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_view_cantidad_inv_bd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="35dp"
            android:text="@string/AIdefaultCantidad"
            android:textColor="@color/ColorTexto"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_view_descripcion_inv_bd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_categoria_inv_bd"
            android:layout_marginStart="0dp"
            android:layout_marginTop="4dp"
            android:text="@string/AIdefaultDescripcion"
            android:textColor="@color/ColorTexto"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_view_categoria_inv_bd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_nombre_inv_bd"
            android:layout_marginTop="4dp"
            android:text="@string/AICategoria"
            android:textColor="@color/ColorTexto"
            android:textSize="16sp"
            android:textStyle="bold" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>